  * Improve a few defoma-doc.doc-base files, closes: #281722.
  * Bug fix: "defoma: formatting error in the Defoma::Common.3pm man
    page", thanks to Nicolas François (Closes: #274434).
  * Bug fix: "example in manual page for defoma-hints", thanks to Martin
    Kourim (Closes: #257777).
  * Use dh_installman to install mangpages, closes: #273502.

 --

defoma (0.11.8-0.1) unstable; urgency=high

  * NMU
  * Apply patch by Jurij Smakov to fix redirecting the output
    streams (Closes: #263270)

 -- Frank Lichtenheld <djpig@debian.org>  Sat, 21 Aug 2004 19:27:43 +0200

defoma (0.11.8) unstable; urgency=low

  * Fix some typos and engrish in dfontmgr.1, closes: #234329.
  * Correct some misspellings of "Generator", closes: #235722.
  * defoma-hints.1: Add explanation of command line options.
    Closes: #235723
  * Bug fix: "defoma-hints --no-question still displays some messages",
    thanks to Flavio Stanchina (Closes: #244092).  Also fixed similar
    problem with libhint-type1.perl.
  * Bug fix: "defoma: --no-question asks questions" (Closes: #248942)

 -- Angus Lees <gus@debian.org>  Tue, 25 May 2004 20:45:29 +1000

defoma (0.11.7) unstable; urgency=low

  * dh_installdefoma: remove call to checkdepends(), which was deleted in
    0.11.6. oops. Closes: #229230.

 -- Angus Lees <angus.lees@urnet.com.au>  Tue, 27 Jan 2004 13:44:53 +1100

defoma (0.11.6) unstable; urgency=low

  * Update defoma-hints.fr.1 to include --no-question too, closes: #212626.
  * Upgrade defoma libft-perl dependency to "Recommends", closes: #222290.
  * Remove version checking code from dh_installdefoma - it should be a
    lintian check, if anything.
  * Actually send "unregister" messages to defoma app scripts.  I hoped
    this would help #179099, but it doesn't seem to :(

 -- Angus Lees <gus@debian.org>  Sat,  3 Jan 2004 12:16:04 +1100

defoma (0.11.5) unstable; urgency=low

  * Remove unused psfontmgr.templates.{de,fr}. Closes: #207675