@@ -1,5 +1,5 @@
 if [ "$1" = "configure" ]; then
 
-  /usr/bin/defoma-app update #PACKAGE#
+  test -x /usr/bin/defoma-app && /usr/bin/defoma-app update #PACKAGE#
 
 fi
