@@ -1,4 +1,4 @@
 FILE='/etc/defoma/hints/#PACKAGE#.hints'
 if [ "$1" = remove ]; then
-	/usr/bin/defoma-font purge-all $FILE
+	test -x /usr/bin/defoma-font && /usr/bin/defoma-font purge-all $FILE
 fi
